<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.guatemalalaboratorio4.GuatemalaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/guatemalaFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/castillo_san_felipe"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/oldGuatemalaBut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/castillo_san_felipe" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="236dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/buttonstar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/nameText"
            style="robot18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="32dp"
            android:text="@string/nombre"
            app:layout_constraintBottom_toBottomOf="@+id/writeText"
            app:layout_constraintEnd_toStartOf="@+id/writeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/writeText"
            app:layout_constraintVertical_bias="0.576"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/writeText"
            style="robot18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/oldGuatemalaBut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.494"
            tools:ignore="Autofill"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/copyText"
            style="robot18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/oldGuatemalaBut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:visibility="gone" />

        <Button
            android:id="@+id/xetululBut"
            style="robot18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/xetulul"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/oldGuatemalaBut"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/oldGuatemalaBut"
            style="robot18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/antigua_guatemala"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rioDulceBut"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/xetululBut" />

        <Button
            android:id="@+id/rioDulceBut"
            style="robot18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/r_o_dulce"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/oldGuatemalaBut" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>